--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       </ul>
 
       
-    <script src="./js/index.js"></script>
+    <script src="./js/drag-and-drop-desktop.js"></script>
 </body>
 </html>
